--- a/src/BD/AlquilerInterfaz/CRUD_CasaVacacional11.form
+++ b/src/BD/AlquilerInterfaz/CRUD_CasaVacacional11.form
@@ -465,24 +465,36 @@
             <Component class="javax.swing.JTable" name="tabla_casaVacacional">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="13" rowCount="4">
+                  <Table columnCount="15" rowCount="4">
                     <Column editable="true" title="ID Casa" type="java.lang.Object"/>
-                    <Column editable="true" title="ID Propiedad" type="java.lang.Object"/>
-                    <Column editable="true" title="Carro" type="java.lang.Object"/>
-                    <Column editable="true" title="Equipamiento" type="java.lang.Object"/>
-                    <Column editable="true" title="Pisos" type="java.lang.Object"/>
-                    <Column editable="true" title="Habitaciones" type="java.lang.Object"/>
-                    <Column editable="true" title="Ba&#xf1;os" type="java.lang.Object"/>
-                    <Column editable="true" title="Picina" type="java.lang.Object"/>
-                    <Column editable="true" title="Jardin" type="java.lang.Object"/>
-                    <Column editable="true" title="WIFI" type="java.lang.Object"/>
-                    <Column editable="true" title="TV" type="java.lang.Object"/>
-                    <Column editable="true" title="Cocina" type="java.lang.Object"/>
-                    <Column editable="true" title="ubicacion" type="java.lang.Object"/>
+                    <Column editable="false" title="Nombre" type="java.lang.Object"/>
+                    <Column editable="false" title="Cedula Propietario" type="java.lang.Object"/>
+                    <Column editable="false" title="Tipo Carro" type="java.lang.Object"/>
+                    <Column editable="false" title="N&#xb0; Pisos" type="java.lang.Object"/>
+                    <Column editable="false" title="N&#xb0; Ba&#xf1;os" type="java.lang.Object"/>
+                    <Column editable="false" title="Capacidad maxima" type="java.lang.Object"/>
+                    <Column editable="false" title="N&#xb0; Habitaciones" type="java.lang.Object"/>
+                    <Column editable="false" title="Piscina" type="java.lang.Object"/>
+                    <Column editable="false" title="WIFI" type="java.lang.Object"/>
+                    <Column editable="false" title="Cocina" type="java.lang.Object"/>
+                    <Column editable="false" title="Jard&#xed;n" type="java.lang.Object"/>
+                    <Column editable="false" title="TV" type="java.lang.Object"/>
+                    <Column editable="true" title="Ubicaci&#xf3;n" type="java.lang.Object"/>
+                    <Column editable="false" title="Otros Detalles" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                       <Title/>
                       <Editor/>
